--- a/404.html
+++ b/404.html
@@ -8,8 +8,8 @@
   <meta name="robots" content="noindex, nofollow">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/images/logo/brand-logo.svg">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="images/logo/brand-logo.svg">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,14 +17,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/components/buttons.css">
-  <link rel="stylesheet" href="/css/components/cards.css">
-  <link rel="stylesheet" href="/css/layout/header.css">
-  <link rel="stylesheet" href="/css/layout/footer.css">
-  <link rel="stylesheet" href="/css/sections/hero.css">
-  <link rel="stylesheet" href="/css/sections/resources.css">
-  <link rel="stylesheet" href="/css/utilities.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/components/buttons.css">
+  <link rel="stylesheet" href="css/components/cards.css">
+  <link rel="stylesheet" href="css/layout/header.css">
+  <link rel="stylesheet" href="css/layout/footer.css">
+  <link rel="stylesheet" href="css/sections/hero.css">
+  <link rel="stylesheet" href="css/sections/resources.css">
+  <link rel="stylesheet" href="css/utilities.css">
 </head>
 <body>
   <div id="header-placeholder"></div>
@@ -40,19 +40,19 @@
         </p>
 
         <div class="error-actions">
-          <a href="/" class="btn btn-primary">Go Home</a>
-          <a href="/properties/" class="btn btn-secondary">Browse Properties</a>
-          <a href="/contact/" class="btn btn-secondary">Contact Us</a>
+          <a href="index.html" class="btn btn-primary">Go Home</a>
+          <a href="properties/index.html" class="btn btn-secondary">Browse Properties</a>
+          <a href="contact/index.html" class="btn btn-secondary">Contact Us</a>
         </div>
 
         <div class="error-popular-links">
           <h2>Popular Pages</h2>
           <ul>
-            <li><a href="/properties/">🏠 Available Properties</a></li>
-            <li><a href="/apply/">📝 Apply for Housing</a></li>
-            <li><a href="/about/">ℹ️ About Us</a></li>
-            <li><a href="/resources/">📚 Housing Resources</a></li>
-            <li><a href="/faq/">❓ Frequently Asked Questions</a></li>
+            <li><a href="properties/index.html">🏠 Available Properties</a></li>
+            <li><a href="apply/index.html">📝 Apply for Housing</a></li>
+            <li><a href="about/index.html">ℹ️ About Us</a></li>
+            <li><a href="resources/index.html">📚 Housing Resources</a></li>
+            <li><a href="faq/index.html">❓ Frequently Asked Questions</a></li>
           </ul>
         </div>
       </div>
@@ -62,9 +62,9 @@
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
-  <script type="module" src="/js/main.js"></script>
-  <script type="module" src="/js/mobile-menu.js"></script>
-  <script type="module" src="/js/theme-toggle.js"></script>
-  <script type="module" src="/js/includes.js"></script>
+  <script type="module" src="js/main.js"></script>
+  <script type="module" src="js/mobile-menu.js"></script>
+  <script type="module" src="js/theme-toggle.js"></script>
+  <script type="module" src="js/includes.js"></script>
 </body>
 </html>
