--- a/apply/index.html
+++ b/apply/index.html
@@ -39,14 +39,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/components/buttons.css">
-  <link rel="stylesheet" href="/css/components/cards.css">
-  <link rel="stylesheet" href="/css/layout/header.css">
-  <link rel="stylesheet" href="/css/layout/footer.css">
-  <link rel="stylesheet" href="/css/sections/hero.css">
-  <link rel="stylesheet" href="/css/sections/resources.css">
-  <link rel="stylesheet" href="/css/utilities.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/components/buttons.css">
+  <link rel="stylesheet" href="../css/components/cards.css">
+  <link rel="stylesheet" href="../css/layout/header.css">
+  <link rel="stylesheet" href="../css/layout/footer.css">
+  <link rel="stylesheet" href="../css/sections/hero.css">
+  <link rel="stylesheet" href="../css/sections/resources.css">
+  <link rel="stylesheet" href="../css/utilities.css">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -261,9 +261,9 @@
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
-  <script type="module" src="/js/main.js"></script>
-  <script type="module" src="/js/mobile-menu.js"></script>
-  <script type="module" src="/js/theme-toggle.js"></script>
-  <script type="module" src="/js/includes.js"></script>
+  <script type="module" src="../js/main.js"></script>
+  <script type="module" src="../js/mobile-menu.js"></script>
+  <script type="module" src="../js/theme-toggle.js"></script>
+  <script type="module" src="../js/includes.js"></script>
 </body>
 </html>
