--- a/faq/index.html
+++ b/faq/index.html
@@ -39,14 +39,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/style.css?v=1.1">
-  <link rel="stylesheet" href="/css/components/buttons.css">
-  <link rel="stylesheet" href="/css/components/cards.css">
-  <link rel="stylesheet" href="/css/layout/header.css">
-  <link rel="stylesheet" href="/css/layout/footer.css">
-  <link rel="stylesheet" href="/css/sections/hero.css">
-  <link rel="stylesheet" href="/css/sections/resources.css">
-  <link rel="stylesheet" href="/css/utilities.css">
+  <link rel="stylesheet" href="../css/style.css?v=1.1">
+  <link rel="stylesheet" href="../css/components/buttons.css">
+  <link rel="stylesheet" href="../css/components/cards.css">
+  <link rel="stylesheet" href="../css/layout/header.css">
+  <link rel="stylesheet" href="../css/layout/footer.css">
+  <link rel="stylesheet" href="../css/sections/hero.css">
+  <link rel="stylesheet" href="../css/sections/resources.css">
+  <link rel="stylesheet" href="../css/utilities.css">
 
   <!-- Preload critical resources -->
   <link rel="preload" as="image" href="/images/banners/hero-faq-banner.png" type="image/png">
@@ -176,7 +176,7 @@
               <span class="accordion-icon" aria-hidden="true">+</span>
             </button>
             <div class="accordion-content" id="faq-1" role="tabpanel" aria-labelledby="faq-header-1">
-              <p>To apply for housing with Properties 4 Creations, simply visit our <a href="/apply/">Apply Now</a> page and fill out our secure online application form. We'll ask for basic information about your housing needs, household size, and voucher type. Our team reviews applications within 24-48 hours and contacts you to discuss available properties that match your requirements.</p>
+              <p>To apply for housing with Properties 4 Creations, simply visit our <a href="../apply/">Apply Now</a> page and fill out our secure online application form. We'll ask for basic information about your housing needs, household size, and voucher type. Our team reviews applications within 24-48 hours and contacts you to discuss available properties that match your requirements.</p>
               <p>We accept both Section 8 and HUD-VASH vouchers, and our veteran-owned company specializes in working with military families and veterans.</p>
             </div>
           </div>
@@ -339,7 +339,7 @@
         <!-- No Results Message -->
         <div id="faq-no-results" class="no-results" style="display: none;" role="status" aria-live="polite">
           <h3>No questions found</h3>
-          <p>Try different search terms or <a href="/contact/">contact us</a> directly with your question.</p>
+          <p>Try different search terms or <a href="../contact/">contact us</a> directly with your question.</p>
         </div>
       </div>
     </section>
@@ -351,8 +351,8 @@
           <h2 id="cta-heading">Still Have Questions?</h2>
           <p>Can't find the answer you're looking for? Our team is here to help with personalized assistance.</p>
           <div class="cta-buttons">
-            <a href="/contact/" class="btn btn-primary">Contact Us</a>
-            <a href="/apply/" class="btn btn-secondary">Apply Now</a>
+            <a href="../contact/" class="btn btn-primary">Contact Us</a>
+            <a href="../apply/" class="btn btn-secondary">Apply Now</a>
           </div>
         </div>
       </div>
@@ -363,9 +363,9 @@
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
-  <script type="module" src="/js/main.js"></script>
-  <script type="module" src="/js/mobile-menu.js"></script>
-  <script type="module" src="/js/theme-toggle.js"></script>
-  <script type="module" src="/js/includes.js"></script>
+  <script type="module" src="../js/main.js"></script>
+  <script type="module" src="../js/mobile-menu.js"></script>
+  <script type="module" src="../js/theme-toggle.js"></script>
+  <script type="module" src="../js/includes.js"></script>
 </body>
 </html>
