--- a/impact/index.html
+++ b/impact/index.html
@@ -39,14 +39,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/components/buttons.css">
-  <link rel="stylesheet" href="/css/components/cards.css">
-  <link rel="stylesheet" href="/css/layout/header.css">
-  <link rel="stylesheet" href="/css/layout/footer.css">
-  <link rel="stylesheet" href="/css/sections/hero.css">
-  <link rel="stylesheet" href="/css/sections/resources.css">
-  <link rel="stylesheet" href="/css/utilities.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/components/buttons.css">
+  <link rel="stylesheet" href="../css/components/cards.css">
+  <link rel="stylesheet" href="../css/layout/header.css">
+  <link rel="stylesheet" href="../css/layout/footer.css">
+  <link rel="stylesheet" href="../css/sections/hero.css">
+  <link rel="stylesheet" href="../css/sections/resources.css">
+  <link rel="stylesheet" href="../css/utilities.css">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -78,8 +78,8 @@
   <header class="header-glass" role="banner">
     <div class="nav-container flex-center-between">
       <div class="brand-container">
-        <a href="/" class="brand-link" aria-label="Properties 4 Creations - Home">
-          <img src="/images/logo/brand-logo.svg"
+        <a href="../index.html" class="brand-link" aria-label="Properties 4 Creations - Home">
+          <img src="../images/logo/brand-logo.svg"
                alt="Properties 4 Creations Logo"
                class="brand-logo">
           <span class="brand-text">Properties 4 Creations</span>
@@ -101,22 +101,22 @@
            aria-label="Main navigation">
         <ul class="nav-menu" role="menubar">
           <li role="none">
-            <a href="/" class="nav-link" role="menuitem">Home</a>
+            <a href="../index.html" class="nav-link" role="menuitem">Home</a>
           </li>
           <li role="none">
-            <a href="/properties/" class="nav-link" role="menuitem">Properties</a>
+            <a href="../properties/index.html" class="nav-link" role="menuitem">Properties</a>
           </li>
           <li role="none">
-            <a href="/about/" class="nav-link" role="menuitem">About</a>
+            <a href="../about/index.html" class="nav-link" role="menuitem">About</a>
           </li>
           <li role="none">
-            <a href="/impact/" class="nav-link" role="menuitem" aria-current="page">Our Impact</a>
+            <a href="../impact/index.html" class="nav-link" role="menuitem" aria-current="page">Our Impact</a>
           </li>
           <li role="none">
-            <a href="/resources/" class="nav-link" role="menuitem">Resources</a>
+            <a href="../resources/index.html" class="nav-link" role="menuitem">Resources</a>
           </li>
           <li role="none">
-            <a href="/contact/" class="nav-link" role="menuitem">Contact</a>
+            <a href="../contact/index.html" class="nav-link" role="menuitem">Contact</a>
           </li>
         </ul>
       </nav>
@@ -186,8 +186,8 @@
           <div class="testimonial-card">
             <div class="testimonial-image">
                           <picture>
-                            <source srcset="/images/properties/card-impact-rodriguez-family-400w.webp" type="image/webp">
-                            <img src="/images/properties/card-impact-rodriguez-family-400w.jpg" alt="Rodriguez family in their new home" loading="lazy">
+                            <source srcset="../images/properties/card-impact-rodriguez-family-400w.webp" type="image/webp">
+                            <img src="../images/properties/card-impact-rodriguez-family-400w.jpg" alt="Rodriguez family in their new home" loading="lazy">
                           </picture>
             </div>
             <blockquote class="testimonial-quote">
@@ -202,8 +202,8 @@
           <div class="testimonial-card">
             <div class="testimonial-image">
                           <picture>
-                            <source srcset="/images/our-work-gallery/our-work-detailed-measuring-400w.webp" type="image/webp">
-                            <img src="/images/our-work-gallery/our-work-detailed-measuring-400w.jpg" alt="Single mother and her children" loading="lazy">
+                            <source srcset="../images/our-work-gallery/our-work-detailed-measuring-400w.webp" type="image/webp">
+                            <img src="../images/our-work-gallery/our-work-detailed-measuring-400w.jpg" alt="Single mother and her children" loading="lazy">
                           </picture>
             </div>
             <blockquote class="testimonial-quote">
@@ -218,8 +218,8 @@
           <div class="testimonial-card">
             <div class="testimonial-image">
                           <picture>
-                            <source srcset="/images/our-work-gallery/our-work-remodeling-400w.webp" type="image/webp">
-                            <img src="/images/our-work-gallery/our-work-remodeling-400w.jpg" alt="Senior veteran couple" loading="lazy">
+                            <source srcset="../images/our-work-gallery/our-work-remodeling-400w.webp" type="image/webp">
+                            <img src="../images/our-work-gallery/our-work-remodeling-400w.jpg" alt="Senior veteran couple" loading="lazy">
                           </picture>
             </div>
             <blockquote class="testimonial-quote">
@@ -234,8 +234,8 @@
           <div class="testimonial-card">
             <div class="testimonial-image">
                           <picture>
-                            <source srcset="/images/our-work-gallery/our-work-painting-dog-400w.webp" type="image/webp">
-                            <img src="/images/our-work-gallery/our-work-painting-dog-400w.jpg" alt="Young veteran with service dog" loading="lazy">
+                            <source srcset="../images/our-work-gallery/our-work-painting-dog-400w.webp" type="image/webp">
+                            <img src="../images/our-work-gallery/our-work-painting-dog-400w.jpg" alt="Young veteran with service dog" loading="lazy">
                           </picture>
             </div>
             <blockquote class="testimonial-quote">
@@ -262,14 +262,14 @@
           <!-- Kitchen Before/After -->
           <div class="gallery-item">
             <h3>Kitchen Renovation</h3>
-            <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-kitchen-400w.webp" data-after="/images/before-after-comparison/projects-after-kitchen-400w.webp">
+            <div class="comparison-slider" data-before="../images/before-after-comparison/projects-before-kitchen-400w.webp" data-after="../images/before-after-comparison/projects-after-kitchen-400w.webp">
                           <picture>
-              <source srcset="/images/before-after-comparison/projects-before-kitchen-400w.webp" type="image/webp">
-              <img src="/images/before-after-comparison/projects-before-kitchen-400w.jpg" alt="Kitchen before renovation - outdated and worn" class="before-image">
+              <source srcset="../images/before-after-comparison/projects-before-kitchen-400w.webp" type="image/webp">
+              <img src="../images/before-after-comparison/projects-before-kitchen-400w.jpg" alt="Kitchen before renovation - outdated and worn" class="before-image">
             </picture>
                           <picture>
-              <source srcset="/images/before-after-comparison/projects-after-kitchen-400w.webp" type="image/webp">
-              <img src="/images/before-after-comparison/projects-after-kitchen-400w.jpg" alt="Kitchen after renovation - modern and functional" class="after-image" style="display: none;">
+              <source srcset="../images/before-after-comparison/projects-after-kitchen-400w.webp" type="image/webp">
+              <img src="../images/before-after-comparison/projects-after-kitchen-400w.jpg" alt="Kitchen after renovation - modern and functional" class="after-image" style="display: none;">
             </picture>
             </div>
             <p>Complete kitchen overhaul including new cabinets, granite countertops, stainless steel appliances, and modern lighting.</p>
@@ -278,14 +278,14 @@
           <!-- Bathroom Before/After -->
           <div class="gallery-item">
             <h3>Bathroom Renovation</h3>
-            <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-bathroom-400w.webp" data-after="/images/before-after-comparison/projects-after-bathroom-400w.webp">
+            <div class="comparison-slider" data-before="../images/before-after-comparison/projects-before-bathroom-400w.webp" data-after="../images/before-after-comparison/projects-after-bathroom-400w.webp">
                           <picture>
-              <source srcset="/images/before-after-comparison/projects-before-bathroom-400w.webp" type="image/webp">
-              <img src="/images/before-after-comparison/projects-before-bathroom-400w.jpg" alt="Bathroom before renovation - outdated fixtures" class="before-image">
+              <source srcset="../images/before-after-comparison/projects-before-bathroom-400w.webp" type="image/webp">
+              <img src="../images/before-after-comparison/projects-before-bathroom-400w.jpg" alt="Bathroom before renovation - outdated fixtures" class="before-image">
             </picture>
                           <picture>
-              <source srcset="/images/before-after-comparison/projects-after-bathroom-400w.webp" type="image/webp">
-              <img src="/images/before-after-comparison/projects-after-bathroom-400w.jpg" alt="Bathroom after renovation - modern and accessible" class="after-image" style="display: none;">
+              <source srcset="../images/before-after-comparison/projects-after-bathroom-400w.webp" type="image/webp">
+              <img src="../images/before-after-comparison/projects-after-bathroom-400w.jpg" alt="Bathroom after renovation - modern and accessible" class="after-image" style="display: none;">
             </picture>
             </div>
             <p>Full bathroom renovation with walk-in showers, modern vanities, ADA-compliant features, and premium finishes.</p>
@@ -294,14 +294,14 @@
           <!-- Living Room Before/After -->
           <div class="gallery-item">
             <h3>Living Area Update</h3>
-            <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-living-room-400w.webp" data-after="/images/before-after-comparison/projects-after-living-room-400w.webp">
+            <div class="comparison-slider" data-before="../images/before-after-comparison/projects-before-living-room-400w.webp" data-after="../images/before-after-comparison/projects-after-living-room-400w.webp">
                           <picture>
-              <source srcset="/images/before-after-comparison/projects-before-living-room-400w.webp" type="image/webp">
-              <img src="/images/before-after-comparison/projects-before-living-room-400w.jpg" alt="Living room before renovation - worn and outdated" class="before-image">
+              <source srcset="../images/before-after-comparison/projects-before-living-room-400w.webp" type="image/webp">
+              <img src="../images/before-after-comparison/projects-before-living-room-400w.jpg" alt="Living room before renovation - worn and outdated" class="before-image">
             </picture>
                           <picture>
-              <source srcset="/images/before-after-comparison/projects-after-living-room-400w.webp" type="image/webp">
-              <img src="/images/before-after-comparison/projects-after-living-room-400w.jpg" alt="Living room after renovation - bright and welcoming" class="after-image" style="display: none;">
+              <source srcset="../images/before-after-comparison/projects-after-living-room-400w.webp" type="image/webp">
+              <img src="../images/before-after-comparison/projects-after-living-room-400w.jpg" alt="Living room after renovation - bright and welcoming" class="after-image" style="display: none;">
             </picture>
             </div>
             <p>Living area transformation with new flooring, fresh paint, updated lighting, and modern window treatments.</p>
@@ -310,14 +310,14 @@
           <!-- Front Porch Before/After -->
           <div class="gallery-item">
             <h3>Exterior Enhancement</h3>
-            <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-front-porch-400w.webp" data-after="/images/before-after-comparison/projects-after-front-porch-400w.webp">
+            <div class="comparison-slider" data-before="../images/before-after-comparison/projects-before-front-porch-400w.webp" data-after="../images/before-after-comparison/projects-after-front-porch-400w.webp">
                           <picture>
-              <source srcset="/images/before-after-comparison/projects-before-front-porch-400w.webp" type="image/webp">
-              <img src="/images/before-after-comparison/projects-before-front-porch-400w.jpg" alt="Front porch before renovation - deteriorated and unsafe" class="before-image">
+              <source srcset="../images/before-after-comparison/projects-before-front-porch-400w.webp" type="image/webp">
+              <img src="../images/before-after-comparison/projects-before-front-porch-400w.jpg" alt="Front porch before renovation - deteriorated and unsafe" class="before-image">
             </picture>
                           <picture>
-              <source srcset="/images/before-after-comparison/projects-after-front-porch-400w.webp" type="image/webp">
-              <img src="/images/before-after-comparison/projects-after-front-porch-400w.jpg" alt="Front porch after renovation - safe and welcoming" class="after-image" style="display: none;">
+              <source srcset="../images/before-after-comparison/projects-after-front-porch-400w.webp" type="image/webp">
+              <img src="../images/before-after-comparison/projects-after-front-porch-400w.jpg" alt="Front porch after renovation - safe and welcoming" class="after-image" style="display: none;">
             </picture>
             </div>
             <p>Curb appeal improvement with new porch, railings, lighting, and landscaping to welcome residents home.</p>
@@ -385,7 +385,7 @@
             </ul>
           </div>
           <div class="standards-image">
-            <img src="/images/our-work-gallery/our-work-framing-door-400w.webp" alt="Professional renovation work in progress" loading="lazy">
+            <img src="../images/our-work-gallery/our-work-framing-door-400w.webp" alt="Professional renovation work in progress" loading="lazy">
           </div>
         </div>
       </div>
@@ -398,8 +398,8 @@
           <h2 id="cta-heading">Be Part of Our Impact</h2>
           <p>Join the growing number of families who have found stability and hope through Properties 4 Creations. Every home we renovate strengthens our community.</p>
           <div class="cta-buttons">
-            <a href="/apply/" class="btn btn-primary">Apply for Housing</a>
-            <a href="/contact/" class="btn btn-secondary">Partner With Us</a>
+            <a href="../apply/" class="btn btn-primary">Apply for Housing</a>
+            <a href="../contact/" class="btn btn-secondary">Partner With Us</a>
           </div>
         </div>
       </div>
@@ -410,10 +410,10 @@
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
-  <script type="module" src="/js/main.js"></script>
-  <script type="module" src="/js/mobile-menu.js"></script>
-  <script type="module" src="/js/theme-toggle.js"></script>
-  <script type="module" src="/js/comparison-slider.js"></script>
-  <script type="module" src="/js/includes.js"></script>
+  <script type="module" src="../js/main.js"></script>
+  <script type="module" src="../js/mobile-menu.js"></script>
+  <script type="module" src="../js/theme-toggle.js"></script>
+  <script type="module" src="../js/comparison-slider.js"></script>
+  <script type="module" src="../js/includes.js"></script>
 </body>
 </html>
