--- a/properties/index.html
+++ b/properties/index.html
@@ -39,14 +39,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/components/buttons.css">
-  <link rel="stylesheet" href="/css/components/cards.css">
-  <link rel="stylesheet" href="/css/layout/header.css">
-  <link rel="stylesheet" href="/css/layout/footer.css">
-  <link rel="stylesheet" href="/css/sections/hero.css">
-  <link rel="stylesheet" href="/css/sections/resources.css">
-  <link rel="stylesheet" href="/css/utilities.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/components/buttons.css">
+  <link rel="stylesheet" href="../css/components/cards.css">
+  <link rel="stylesheet" href="../css/layout/header.css">
+  <link rel="stylesheet" href="../css/layout/footer.css">
+  <link rel="stylesheet" href="../css/sections/hero.css">
+  <link rel="stylesheet" href="../css/sections/resources.css">
+  <link rel="stylesheet" href="../css/utilities.css">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -117,8 +117,8 @@
   <header class="header-glass" role="banner">
     <div class="nav-container flex-center-between">
       <div class="brand-container">
-        <a href="/index.html" class="brand-link" aria-label="Properties 4 Creations - Home">
-          <img src="/images/logo/brand-logo.svg"
+        <a href="../index.html" class="brand-link" aria-label="Properties 4 Creations - Home">
+          <img src="../images/logo/brand-logo.svg"
                alt="Properties 4 Creations Logo"
                class="brand-logo">
           <span class="brand-text">Properties 4 Creations</span>
@@ -140,22 +140,22 @@
            aria-label="Main navigation">
         <ul class="nav-menu" role="menubar">
           <li role="none">
-            <a href="/index.html" class="nav-link" role="menuitem">Home</a>
+            <a href="../index.html" class="nav-link" role="menuitem">Home</a>
           </li>
           <li role="none">
-            <a href="/properties/index.html" class="nav-link" role="menuitem" aria-current="page">Properties</a>
+            <a href="../properties/index.html" class="nav-link" role="menuitem" aria-current="page">Properties</a>
           </li>
           <li role="none">
-            <a href="/about/index.html" class="nav-link" role="menuitem">About</a>
+            <a href="../about/index.html" class="nav-link" role="menuitem">About</a>
           </li>
           <li role="none">
-            <a href="/impact/index.html" class="nav-link" role="menuitem">Our Impact</a>
+            <a href="../impact/index.html" class="nav-link" role="menuitem">Our Impact</a>
           </li>
           <li role="none">
-            <a href="/resources/index.html" class="nav-link" role="menuitem">Resources</a>
+            <a href="../resources/index.html" class="nav-link" role="menuitem">Resources</a>
           </li>
           <li role="none">
-            <a href="/contact/index.html" class="nav-link" role="menuitem">Contact</a>
+            <a href="../contact/index.html" class="nav-link" role="menuitem">Contact</a>
           </li>
         </ul>
       </nav>
@@ -178,7 +178,7 @@
     <!-- Hero Section -->
     <section class="hero" aria-labelledby="hero-heading">
       <video autoplay muted loop class="hero-video" aria-hidden="true">
-        <source src="/images/videos/hero-properties-banner.mp4" type="video/mp4">
+        <source src="../images/videos/hero-properties-banner.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <div class="container">
@@ -248,7 +248,7 @@
 
           <!-- Longview Victorian -->
           <article class="property-card" data-bedrooms="4" data-location="Longview">
-            <img src="/images/properties/longview-victorian.webp"
+            <img src="../images/properties/longview-victorian.webp"
                  alt="Longview Victorian - historic 4 bedroom, 2.5 bathroom Victorian home"
                  loading="lazy">
             <div class="property-content">
@@ -270,7 +270,7 @@
 
           <!-- Jefferson Riverfront -->
           <article class="property-card" data-bedrooms="2" data-location="Jefferson">
-            <img src="/images/properties/jefferson-riverfront.webp"
+            <img src="../images/properties/jefferson-riverfront.webp"
                  alt="Jefferson Riverfront - cozy 2 bedroom, 1 bathroom waterfront home"
                  loading="lazy">
             <div class="property-content">
@@ -292,7 +292,7 @@
 
           <!-- Kemp Townhome -->
           <article class="property-card" data-bedrooms="1" data-location="Kemp">
-            <img src="/images/properties/kemp-townhome.webp"
+            <img src="../images/properties/kemp-townhome.webp"
                  alt="Kemp Townhome - modern 1 bedroom, 1 bathroom townhome"
                  loading="lazy">
             <div class="property-content">
@@ -313,7 +313,7 @@
 
           <!-- Marshall Historic Farmhouse -->
           <article class="property-card" data-bedrooms="3" data-location="Marshall">
-            <img src="/images/properties/marshall-historic-farm.webp"
+            <img src="../images/properties/marshall-historic-farm.webp"
                  alt="Marshall Historic Farmhouse - spacious 3 bedroom, 2 bathroom farmhouse"
                  loading="lazy">
             <div class="property-content">
@@ -335,7 +335,7 @@
 
           <!-- Mineola Modern Studio -->
           <article class="property-card" data-bedrooms="0" data-location="Mineola">
-            <img src="/images/properties/mineola-modern-studio.webp"
+            <img src="../images/properties/mineola-modern-studio.webp"
                  alt="Mineola Modern Studio - efficient studio apartment in downtown Mineola"
                  loading="lazy">
             <div class="property-content">
@@ -360,7 +360,7 @@
         <!-- No Results Message -->
         <div id="no-results" class="no-results" style="display: none;" role="status" aria-live="polite">
           <h3>No properties match your search criteria</h3>
-          <p>Try adjusting your filters or <a href="/contact/">contact us</a> to discuss custom options.</p>
+          <p>Try adjusting your filters or <a href="../contact/">contact us</a> to discuss custom options.</p>
         </div>
       </div>
     </section>
@@ -372,8 +372,8 @@
           <h2 id="cta-heading">Ready to Apply?</h2>
           <p>Found a property that meets your needs? Start your application process today.</p>
         <div class="cta-buttons">
-          <a href="/apply/index.html" class="btn btn-primary">Apply Now</a>
-          <a href="/contact/index.html" class="btn btn-secondary">Ask Questions</a>
+          <a href="../apply/index.html" class="btn btn-primary">Apply Now</a>
+          <a href="../contact/index.html" class="btn btn-secondary">Ask Questions</a>
         </div>
         </div>
       </div>
@@ -384,9 +384,9 @@
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
-  <script type="module" src="/js/main.js"></script>
-  <script type="module" src="/js/mobile-menu.js"></script>
-  <script type="module" src="/js/theme-toggle.js"></script>
-  <script type="module" src="/js/includes.js"></script>
+  <script type="module" src="../js/main.js"></script>
+  <script type="module" src="../js/mobile-menu.js"></script>
+  <script type="module" src="../js/theme-toggle.js"></script>
+  <script type="module" src="../js/includes.js"></script>
 </body>
 </html>
