--- a/resources/index.html
+++ b/resources/index.html
@@ -39,14 +39,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/components/buttons.css">
-  <link rel="stylesheet" href="/css/components/cards.css">
-  <link rel="stylesheet" href="/css/layout/header.css">
-  <link rel="stylesheet" href="/css/layout/footer.css">
-  <link rel="stylesheet" href="/css/sections/hero.css">
-  <link rel="stylesheet" href="/css/sections/resources.css">
-  <link rel="stylesheet" href="/css/utilities.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/components/buttons.css">
+  <link rel="stylesheet" href="../css/components/cards.css">
+  <link rel="stylesheet" href="../css/layout/header.css">
+  <link rel="stylesheet" href="../css/layout/footer.css">
+  <link rel="stylesheet" href="../css/sections/hero.css">
+  <link rel="stylesheet" href="../css/sections/resources.css">
+  <link rel="stylesheet" href="../css/utilities.css">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -73,8 +73,8 @@
   <header class="header-glass" role="banner">
     <div class="nav-container flex-center-between">
       <div class="brand-container">
-        <a href="/" class="brand-link" aria-label="Properties 4 Creations - Home">
-          <img src="/images/logo/brand-logo.svg"
+        <a href="../index.html" class="brand-link" aria-label="Properties 4 Creations - Home">
+          <img src="../images/logo/brand-logo.svg"
                alt="Properties 4 Creations Logo"
                class="brand-logo">
           <span class="brand-text">Properties 4 Creations</span>
@@ -96,22 +96,22 @@
            aria-label="Main navigation">
         <ul class="nav-menu" role="menubar">
           <li role="none">
-            <a href="/" class="nav-link" role="menuitem">Home</a>
+            <a href="../index.html" class="nav-link" role="menuitem">Home</a>
           </li>
           <li role="none">
-            <a href="/properties/" class="nav-link" role="menuitem">Properties</a>
+            <a href="../properties/index.html" class="nav-link" role="menuitem">Properties</a>
           </li>
           <li role="none">
-            <a href="/about/" class="nav-link" role="menuitem">About</a>
+            <a href="../about/index.html" class="nav-link" role="menuitem">About</a>
           </li>
           <li role="none">
-            <a href="/impact/" class="nav-link" role="menuitem">Our Impact</a>
+            <a href="../impact/index.html" class="nav-link" role="menuitem">Our Impact</a>
           </li>
           <li role="none">
-            <a href="/resources/" class="nav-link" role="menuitem" aria-current="page">Resources</a>
+            <a href="../resources/index.html" class="nav-link" role="menuitem" aria-current="page">Resources</a>
           </li>
           <li role="none">
-            <a href="/contact/" class="nav-link" role="menuitem">Contact</a>
+            <a href="../contact/index.html" class="nav-link" role="menuitem">Contact</a>
           </li>
         </ul>
       </nav>
@@ -354,8 +354,8 @@
           <h2 id="cta-heading">Need Help Navigating These Resources?</h2>
           <p>Our team is here to help you understand and access these housing programs. We can guide you through applications and connect you with the right resources.</p>
           <div class="cta-buttons">
-            <a href="/contact/" class="btn btn-primary">Get Personalized Help</a>
-            <a href="/apply/" class="btn btn-secondary">Apply for Housing</a>
+            <a href="../contact/" class="btn btn-primary">Get Personalized Help</a>
+            <a href="../apply/" class="btn btn-secondary">Apply for Housing</a>
           </div>
         </div>
       </div>
@@ -366,9 +366,9 @@
   <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
-  <script type="module" src="/js/main.js"></script>
-  <script type="module" src="/js/mobile-menu.js"></script>
-  <script type="module" src="/js/theme-toggle.js"></script>
-  <script type="module" src="/js/includes.js"></script>
+  <script type="module" src="../js/main.js"></script>
+  <script type="module" src="../js/mobile-menu.js"></script>
+  <script type="module" src="../js/theme-toggle.js"></script>
+  <script type="module" src="../js/includes.js"></script>
 </body>
 </html>
