--- a/apply/index.html
+++ b/apply/index.html
@@ -265,5 +265,6 @@
   <script type="module" src="../js/mobile-menu.js"></script>
   <script type="module" src="../js/theme-toggle.js"></script>
   <script type="module" src="../js/includes.js"></script>
+  <script type="module" src="../js/forms.js"></script>
 </body>
 </html>
